--- a/src/todo
+++ b/src/todo
@@ -1,8 +1,9 @@
 --- close ---
 BoolRect | safely leaving hover toggle not one chidren
-TextProp {lable, size, color, background}
+TextProp {lable, size, color, background, font_filename}
 
 --- far ---
+replace vector with list in sub_event_systems
 SmartColor -> RGBA
 photoshop
 
