--- a/src/todo
+++ b/src/todo
@@ -1,6 +1,6 @@
 --- close ---
 BoolRect | safely leaving hover toggle not one chidren
-TextProp {lable, size, color, background, font_filename}
+TextProp {label, size, color, background, font_filename}
 
 --- far ---
 replace vector with list in sub_event_systems
