abstract history state machine done

--- a/changelog.txt
+++ b/changelog.txt
@@ -20,3 +20,5 @@
 6) Open images from the disk with beautiful dialog!
 
 7) Enter fullscreen mode by running app with any cmd options
+
+8) Ctrl+[Left] / Ctrl+[Right] in text input work as they should
